# polygon_gridmap

./: CMakeLists.txt  README.md  package.xml
config/: obstacle_polygons.yaml
launch/: polygon_gridmap.launch
src/: polygon_to_grid_map.cpp
